# handler/op/auth.go
@@ -1,9 +1,11 @@
 package op
 
 import (
-	"log"
+	"bytes"
 	"net/http"
+	"net/url"
 
+	"github.com/google/uuid"
 	"github.com/morning-night-dream/oidc/pkg/openapi"
 )
 
@@ -12,11 +14,27 @@ func (op *OP) Authorize(
 	r *http.Request,
 	params openapi.OpAuthorizeParams,
 ) {
-	log.Printf("%+v", params)
+	// TODO: Client ID の検証
 
-	// Client ID の検証
+	// TODO: Redirect URL の検証
 
-	// Redirect URL の検証
+	var buf bytes.Buffer
 
-	log.Printf("%+v", r.URL.Query())
+	buf.WriteString("http://localhost:1234/op/login/view")
+
+	id := uuid.NewString()
+
+	op.AuthorizeParamsCache.Set(id, params)
+
+	values := url.Values{
+		"auth_request_id": {id},
+	}
+
+	buf.WriteByte('?')
+
+	buf.WriteString(values.Encode())
+
+	url := buf.String()
+
+	http.Redirect(w, r, url, http.StatusFound)
 }
